# ggp-cpp

./: .gitignore  CMakeLists.txt  README.md  aws_setup.sh  benchmark.sh  install-tools-and-libtorch.sh  lint_cpp.sh  play.cpp  remote-install.sh  run_with_highest_priority.sh  setup.cpp  setup.hpp  train
.github/workflows/: build.yml  cmake-single-platform.yml  lint.yml
agents/: CMakeLists.txt  agent.cpp  factory.cpp  human.cpp  human.hpp  non_seeing.cpp  simple.cpp  simple.hpp
agents/include/: agent.hpp  factory.hpp  human.hpp  non_seeing.hpp  simple.hpp
agents/src/: agent.cpp  factory.cpp  human.cpp  human.hpp  non_seeing.cpp  simple.cpp  simple.hpp
benchmarks/: blindtictactoe_constants.py  plot_blindtictactoe_variant.py
benchmarks/blindtictactoe/: 0000001200.json  moves_to_inputs.py  plot.py  speed-0000008000.json
benchmarks/blindtictactoeXbias/: moves_to_inputs.py  plot.py
benchmarks/blindtictactoeXwins/: moves_to_inputs.py  plot.py
benchmarks/meier/: speed-0000001000.json
benchmarks/scissor_paper_rock/: 0000002000.json  0000004000.json  0000006000.json  0000008000.json  0000010000.json  0000012000.json  0000014000.json  0000016000.json  old.json  plot.py  speed-old.json
games/: all_python_to_json.py  all_rules_to_python.py  constants.py  folder_constants.py
games/json/: blindtictactoe.json  blindtictactoeXbias.json  blindtictactoeXwins.json  connectFour.json  kriegTTT_5x5.json  meier.json  montyhall.json  scissor_paper_rock.json  scissors_paper_rock.json  transit.json  vis_pacman3p.json
games/python/: backgammon.py  meier.py
games/rules/: connect4.gdl
models/blindtictactoe/: time-log.txt
models/blindtictactoeXwins/: time-log.txt
models/meier/: README.md
models/scissor_paper_rock/: model-game-num-000100.pt  model-game-num-002000.pt  model-game-num-007600.pt  optimiser-game-num-000100.pt  optimiser-game-num-002000.pt  optimiser-game-num-007600.pt  time-log.txt
player/: CMakeLists.txt
player/include/: bogo_random_sampler.hpp  misc.hpp  model.hpp  player.hpp  random_sampler.hpp  search.hpp  types.hpp
player/src/: bogo_random_sampler.cpp  misc.cpp  model.cpp  random_sampler.cpp  search.cpp
propnet/: CMakeLists.txt  basenet.cpp  basenet_parser.cpp  nodes.cpp  nodes.hpp  parser.cpp  persistent_array.hpp  persistent_array_state.cpp  persistent_array_state.hpp  propnet.cpp  role.cpp  state.cpp  state.hpp  state_data.cpp  state_data.hpp  vector_state.cpp
propnet/include/: basenet.hpp  basenet_parser.hpp  input_set.hpp  parser.hpp  propnet.hpp  role.hpp  types.hpp  vector_state.hpp
propnet/src/: input_set.cpp  nodes.cpp  nodes.hpp  parser.cpp  persistent_array_state.cpp  persistent_array_state.hpp  propnet.cpp  role.cpp  vector_state.cpp
rebel/: CMakeLists.txt  bogo_sampler.cpp  misc.cpp  misc.hpp  naive_sampler.cpp  rebel.cpp  sampler.hpp  sampler_heuristics.cpp  sampler_heuristics.hpp  training_sampler.cpp  training_sampler.hpp
rebel/include/: bogo_random_sampler.hpp  bogo_sampler.hpp  cfr.hpp  lazy_training_sampler.hpp  misc.hpp  model.hpp  naive_sampler.hpp  policy_sampler.hpp  random_sampler.hpp  rebel.hpp  search.hpp  training_sampler.hpp  types.hpp
rebel/src/: bogo_random_sampler.cpp  bogo_sampler.cpp  cfr.cpp  cfr.hpp  lazy_training_sampler.cpp  misc.cpp  misc.hpp  model.cpp  naive_sampler.cpp  opponent_factory.hpp  policy_sampler.cpp  random_sampler.cpp  sampler.hpp  search.cpp  training_sampler.cpp
server/: constants.py  game_server.py  server.py
server/propnet/: README.md  node.pyx  propnet.pyx  propnet_wrapper.py  setup.py
src/: benchmark.cpp  debug.cpp  play.cpp  play_external.cpp  setup.cpp  setup.hpp  temp.cpp  train.cpp
